Revision history for Data::Validation

0.9.172  2012-12-12
         - Fixed test exception expression for SZABGAB

0.9.171  2012-12-06
         - Stopped SZABGAB ValidHostname b205ae2e-6bf6-1014-b3ec-ac592aa2da19

0.9.169  2012-12-04
         - Broken ValidHostname smokers now only skip one test
         - Stopped Kimmel ValidHostname 157e3292-38c2-11e2-8ee7-bb3f1c5ae6b4

0.9.168  2012-11-22
         - Stopped jlavallee ValidHostname 0eb5f38a-2f69-11e2-8c64-eb58c9467480

0.9.166  2012-11-13
         - Updated inc::Bob to 1.7. Removed defined ors
         - Compare error args translated to l10n labels

0.9.164  2012-11-11
         - Stopped grahamc ValidHostname 49ebef50-1ad2-11e2-ab43-8db1a6229e16
         - Updated inc::Bob to 1.6

0.9.160  2012-10-20
         - Deprecated the description field name attribute fhelp in favour
           of label
         - Stopped andk ValidHostname d22233d2-157a-11e2-a919-2d6bb4e8b0a6

0.8.155  2012-09-06
         - Added POD spelling tests
         - Updated inc::Bob to 1.5

0.8.153  2012-06-11
         - Added filterZeroLength
         - Fixed bug when filters but no validations

0.7.152  2012-05-02
         - Fixed expression detecting Konig's smoker

0.7.151  2012-04-29
         - Stopped Konig CPAN testing. Compare
           2874f920-91ca-11e1-a09c-f66955de7b98 with
           542b6056-8ca0-11e1-951f-159b42b6749c same OS, OS version,
           architecture and Perl version, different results. Random

0.7.150  2012-04-19
         - Turned CPAN testing on
         - Changed D_V_Exception constriant name to current standard
         - Updated inc::Bob to 1.3
         - Updated inc::Bob. Added inc::CPANTesting
         - Updated Moose / Class::MOP / MRO::Compat dependencies
         - Updated inc::Bob

0.6.141  2011-04-12
         - Suppressed dcollins CPAN testing
         - Checks all fields in a form. Returns multiple errors
         - Now uses Try::Tiny
         - Moved boilerplate M::B subclass code to inc/Bob.pm